// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test base/DataExport/Create/CreateExportTask should match snapshot when audit loading is equal true 1`] = `
<div>
  <div
    class="ant-spin-nested-loading"
  >
    <div>
      <div
        aria-busy="true"
        aria-live="polite"
        class="ant-spin ant-spin-spinning"
      >
        <span
          class="ant-spin-dot ant-spin-dot-spin"
        >
          <i
            class="ant-spin-dot-item"
          />
          <i
            class="ant-spin-dot-item"
          />
          <i
            class="ant-spin-dot-item"
          />
          <i
            class="ant-spin-dot-item"
          />
        </span>
      </div>
    </div>
    <div
      class="ant-spin-container ant-spin-blur"
    >
      <section
        class="css-doq0dk"
      >
        <div
          class="actiontech-page-header-namespace fixed-style css-1xspr0w"
        >
          <div
            class="title"
          >
            <a
              href="/project//data/export"
            >
              <button
                class="ant-btn ant-btn-default basic-button-wrapper css-1vnelmv"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.219 7.333h8.114v1.334H5.22l3.576 3.576-.943.942L2.667 8l5.185-5.185.943.942z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <span>
                  返回工单列表
                </span>
              </button>
            </a>
          </div>
          <div
            class="extra"
          >
            <button
              class="ant-btn ant-btn-default basic-button-wrapper css-1vnelmv"
              disabled=""
              type="button"
            >
              <span>
                重 置
              </span>
            </button>
          </div>
        </div>
        <form
          class="ant-form ant-form-vertical hasTopHeader clearPaddingBottom css-19jfn7e"
        >
          <section
            class="has-border css-1114g56"
          >
            <section
              class="css-bspaai"
            >
              <h3
                class="ant-typography css-p50odb"
              >
                <span
                  class="anticon title-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="0 0 24 28"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M4 3.333v5.334h16V3.333h2.675c.732 0 1.325.594 1.325 1.325v21.35c0 .732-.593 1.325-1.325 1.325H1.325A1.325 1.325 0 0 1 0 26.01V4.658c0-.732.593-1.325 1.325-1.325zm4 17.334H5.333v2.666H8zm0-4H5.333v2.666H8zm0-4H5.333v2.666H8zm9.333-12V6H6.667V.667z"
                      fill="#C3C6CD"
                    />
                  </svg>
                </span>
                <span>
                  创建导出工单
                </span>
              </h3>
              <div
                class="ant-form-item css-15d6abf"
              >
                <div
                  class="ant-row ant-form-item-row"
                >
                  <div
                    class="ant-col ant-form-item-label ant-form-item-label-left"
                  >
                    <label
                      class="ant-form-item-required ant-form-item-no-colon"
                      for="workflow_subject"
                      title=""
                    />
                  </div>
                  <div
                    class="ant-col ant-form-item-control"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <input
                          aria-required="true"
                          class="ant-input basic-input-wrapper workflow-name-input-wrapper css-opeiev"
                          id="workflow_subject"
                          placeholder="请输入数据导出工单名称"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-form-item workflow-base-info-desc-form-item css-1jlm9cy"
              >
                <div
                  class="ant-row ant-form-item-row"
                >
                  <div
                    class="ant-col ant-form-item-label ant-form-item-label-left"
                  >
                    <label
                      class="ant-form-item-no-colon"
                      for="desc"
                      title="工单描述"
                    >
                      工单描述
                    </label>
                  </div>
                  <div
                    class="ant-col ant-form-item-control"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <span
                          class="ant-input-affix-wrapper basic-input-wrapper css-1pd1cd5 ant-input-textarea-affix-wrapper ant-input-textarea-show-count ant-input-show-count"
                          data-count="0 / 3000"
                        >
                          <textarea
                            class="ant-input"
                            id="desc"
                            placeholder="点击添加数据导出描述"
                            style="overflow-y: hidden; resize: none;"
                          />
                          <span
                            class="ant-input-suffix"
                          >
                            <span
                              class="ant-input-data-count"
                            >
                              0 / 3000
                            </span>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </section>
          </section>
        </form>
        <form
          class="ant-form ant-form-horizontal clearPaddingBottom css-23knkd"
        >
          <section
            class="has-border css-1114g56"
          >
            <section
              class="css-bspaai"
            >
              <h1
                class="ant-typography css-1eepp70"
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px;"
                  >
                    选择导出对象
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle tooltips-default-icon"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
              </h1>
              <div
                class="ant-form-item has-required-style css-1jlm9cy"
              >
                <div
                  class="ant-row ant-form-item-row"
                >
                  <div
                    class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left"
                  >
                    <label
                      class="ant-form-item-required ant-form-item-no-colon"
                      for="dbService"
                      title=""
                    >
                      <div
                        class="label-cont-custom"
                      >
                        <span
                          class="custom-icon-ellipse css-u3jcp4"
                        >
                          <svg
                            fill="none"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <rect
                              fill="#E8F3FF"
                              height="16"
                              rx="3"
                              width="16"
                            />
                            <circle
                              cx="8"
                              cy="8"
                              fill="#fff"
                              r="3"
                              stroke="#4583FF"
                              stroke-width="2"
                            />
                          </svg>
                        </span>
                        <span>
                          数据源
                        </span>
                      </div>
                    </label>
                  </div>
                  <div
                    class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <div
                          aria-required="true"
                          class="ant-select ant-select-in-form-item basic-select-wrapper css-1gowd4m ant-select-single ant-select-show-arrow ant-select-loading"
                        >
                          <div
                            class="ant-select-selector"
                          >
                            <span
                              class="ant-select-selection-search"
                            >
                              <input
                                aria-activedescendant="dbService_list_0"
                                aria-autocomplete="list"
                                aria-controls="dbService_list"
                                aria-expanded="false"
                                aria-haspopup="listbox"
                                aria-owns="dbService_list"
                                aria-required="true"
                                autocomplete="off"
                                class="ant-select-selection-search-input"
                                id="dbService"
                                readonly=""
                                role="combobox"
                                style="opacity: 0;"
                                type="search"
                                unselectable="on"
                                value=""
                              />
                            </span>
                            <span
                              class="ant-select-selection-placeholder"
                            >
                              请选择数据源
                            </span>
                          </div>
                          <span
                            aria-hidden="true"
                            class="ant-select-arrow ant-select-arrow-loading"
                            style="user-select: none;"
                            unselectable="on"
                          >
                            <span
                              aria-label="loading"
                              class="anticon anticon-loading anticon-spin"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="loading"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="0 0 1024 1024"
                                width="1em"
                              >
                                <path
                                  d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-form-item css-1jlm9cy ant-form-item-hidden"
              >
                <div
                  class="ant-row ant-form-item-row"
                >
                  <div
                    class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <input
                          class="ant-input basic-input-wrapper css-1pd1cd5"
                          id="dbType"
                          placeholder="请输入{{name}}"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-form-item has-required-style css-1jlm9cy"
              >
                <div
                  class="ant-row ant-form-item-row"
                >
                  <div
                    class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left"
                  >
                    <label
                      class="ant-form-item-required ant-form-item-no-colon"
                      for="schema"
                      title=""
                    >
                      <div
                        class="label-cont-custom"
                      >
                        <span
                          class="custom-icon-ellipse css-u3jcp4"
                        >
                          <svg
                            fill="none"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <rect
                              fill="#E8F3FF"
                              height="16"
                              rx="3"
                              width="16"
                            />
                            <circle
                              cx="8"
                              cy="8"
                              fill="#fff"
                              r="3"
                              stroke="#4583FF"
                              stroke-width="2"
                            />
                          </svg>
                        </span>
                        <span>
                          数据库
                        </span>
                      </div>
                    </label>
                  </div>
                  <div
                    class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <div
                          aria-required="true"
                          class="ant-select ant-select-in-form-item basic-select-wrapper css-1gowd4m ant-select-single ant-select-show-arrow"
                        >
                          <div
                            class="ant-select-selector"
                          >
                            <span
                              class="ant-select-selection-search"
                            >
                              <input
                                aria-activedescendant="schema_list_0"
                                aria-autocomplete="list"
                                aria-controls="schema_list"
                                aria-expanded="false"
                                aria-haspopup="listbox"
                                aria-owns="schema_list"
                                aria-required="true"
                                autocomplete="off"
                                class="ant-select-selection-search-input"
                                id="schema"
                                readonly=""
                                role="combobox"
                                style="opacity: 0;"
                                type="search"
                                unselectable="on"
                                value=""
                              />
                            </span>
                            <span
                              class="ant-select-selection-placeholder"
                            >
                              请选择数据库
                            </span>
                          </div>
                          <span
                            aria-hidden="true"
                            class="ant-select-arrow"
                            style="user-select: none;"
                            unselectable="on"
                          >
                            <span
                              aria-label="down"
                              class="anticon anticon-down ant-select-suffix"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="down"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </section>
          </section>
        </form>
        <form
          class="ant-form ant-form-horizontal clearPaddingBottom css-19jfn7e"
        >
          <section
            class="css-bspaai"
          >
            <h1
              class="ant-typography css-1eepp70"
            >
              选择导出方式
            </h1>
            <div
              class="ant-form-item css-15d6abf"
            >
              <div
                class="ant-row ant-form-item-row"
              >
                <div
                  class="ant-col ant-form-item-label ant-form-item-label-left"
                >
                  <label
                    class="ant-form-item-no-colon"
                    for="exportMethod"
                    title=""
                  />
                </div>
                <div
                  class="ant-col ant-form-item-control"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <div
                        class="ant-row actiontech-mode-switcher"
                        id="exportMethod"
                      >
                        <div
                          class="ant-col ant-col-8"
                        >
                          <div
                            class="actiontech-mode-switcher-item actiontech-mode-switcher-item-active css-klzra6"
                          >
                            <span
                              class="actiontech-mode-switcher-item-icon"
                            >
                              <svg
                                height="18"
                                viewBox="0 0 18 18"
                                width="18"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M15 7.5H3v6.75h12zM2.25 2.25h13.5a.75.75 0 0 1 .75.75v12a.75.75 0 0 1-.75.75H2.25A.75.75 0 0 1 1.5 15V3a.75.75 0 0 1 .75-.75m1.5 2.25V6h1.5V4.5zm3 0V6h1.5V4.5zm-3 3.75H6V12H3.75z"
                                  fill="currentColor"
                                />
                              </svg>
                            </span>
                            <span
                              class="actiontech-mode-switcher-item-text"
                            >
                              输入SQL语句
                            </span>
                            <div
                              class="active-icon-wrapper"
                            >
                              <span
                                class="icon-mode-switcher-checked active-icon"
                              >
                                <svg
                                  fill="none"
                                  height="14"
                                  viewBox="0 0 14 14"
                                  width="14"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <g
                                    id="Frame"
                                  >
                                    <path
                                      d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                                      id="Vector"
                                      stroke="#FCFBF9"
                                      stroke-linejoin="round"
                                      stroke-width="1.5"
                                    />
                                  </g>
                                </svg>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-form-item css-15d6abf"
            >
              <div
                class="ant-row ant-form-item-row"
              >
                <div
                  class="ant-col ant-form-item-label ant-form-item-label-left"
                >
                  <label
                    class="ant-form-item-required ant-form-item-no-colon"
                    for="sql"
                    title=""
                  />
                </div>
                <div
                  class="ant-col ant-form-item-control"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <div
                        class="css-1sm8xw8"
                      >
                        <div
                          class="custom-monaco-editor-wrapper css-1esok7i"
                        >
                          <input
                            aria-required="true"
                            class="custom-monaco-editor"
                            height="400px"
                            id="sql"
                            language="sql"
                            options="{"automaticLayout":true,"minimap":{"enabled":false},"fontFamily":"SF Mono","fontSize":14,"fontWeight":"400","lineNumbersMinChars":2,"suggestFontSize":14,"scrollBeyondLastLine":false,"lineHeight":24,"letterSpacing":0.8,"overviewRulerBorder":false,"wordWrap":"on","wrappingStrategy":"advanced","wrappingIndent":"indent","scrollbar":{"vertical":"visible","horizontal":"visible","useShadows":false,"verticalScrollbarSize":12,"horizontalScrollbarSize":12,"alwaysConsumeMouseWheel":false},"folding":false,"lineNumbers":"on","glyphMargin":false,"lineDecorationsWidth":50,"renderValidationDecorations":"on","guides":{"indentation":true,"highlightActiveIndentation":true}}"
                            value="/* input your sql */"
                            width="100%"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-form-item css-15d6abf ant-form-item-hidden"
            >
              <div
                class="ant-row ant-form-item-row"
              >
                <div
                  class="ant-col ant-form-item-label ant-form-item-label-left"
                >
                  <label
                    class="ant-form-item-no-colon"
                    for="formatted"
                    title=""
                  />
                </div>
                <div
                  class="ant-col ant-form-item-control"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <button
                        aria-checked="false"
                        class="ant-switch basic-switch-wrapper css-g6dhbn"
                        id="formatted"
                        role="switch"
                        type="button"
                      >
                        <div
                          class="ant-switch-handle"
                        />
                        <span
                          class="ant-switch-inner"
                        >
                          <span
                            class="ant-switch-inner-checked"
                          />
                          <span
                            class="ant-switch-inner-unchecked"
                          />
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-form-item css-15d6abf ant-form-item-hidden"
            >
              <div
                class="ant-row ant-form-item-row"
              >
                <div
                  class="ant-col ant-form-item-label ant-form-item-label-left"
                >
                  <label
                    class="ant-form-item-no-colon"
                    for="originSql"
                    title=""
                  />
                </div>
                <div
                  class="ant-col ant-form-item-control"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <input
                        class="ant-input basic-input-wrapper css-1pd1cd5"
                        id="originSql"
                        placeholder="请输入{{name}}"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </form>
        <section
          class="css-bspaai"
          style="padding-bottom: 80px;"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 12px;"
            >
              <button
                class="ant-btn ant-btn-primary ant-btn-loading basic-button-wrapper css-1vnelmv"
                type="button"
              >
                <span
                  class="ant-btn-icon ant-btn-loading-icon"
                >
                  <span
                    aria-label="loading"
                    class="anticon anticon-loading anticon-spin"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="loading"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                    >
                      <path
                        d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                      />
                    </svg>
                  </span>
                </span>
                <span>
                  审 核
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
              style="margin-right: 12px;"
            >
              <button
                class="ant-btn ant-btn-default ant-btn-loading basic-button-wrapper css-1s5ld2m"
                type="button"
              >
                <span
                  class="ant-btn-icon ant-btn-loading-icon"
                >
                  <span
                    aria-label="loading"
                    class="anticon anticon-loading anticon-spin"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="loading"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                    >
                      <path
                        d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                      />
                    </svg>
                  </span>
                </span>
                <span>
                  SQL美化
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
              >
                <div
                  class="ant-space-item"
                >
                  <svg
                    color="#8A8F99"
                    height="14"
                    viewBox="0 0 14 14"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7 12.833A5.833 5.833 0 1 1 7 1.167a5.833 5.833 0 0 1 0 11.666m0-1.166a4.666 4.666 0 1 0 0-9.333 4.666 4.666 0 0 0 0 9.333m-.583-7.584h1.166V5.25H6.417zm0 2.334h1.166v3.5H6.417z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </section>
      </section>
    </div>
  </div>
</div>
`;

exports[`test base/DataExport/Create/CreateExportTask should match snapshot when auditLoading is equal false 1`] = `
<div>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <section
        class="css-doq0dk"
      >
        <div
          class="actiontech-page-header-namespace fixed-style css-1xspr0w"
        >
          <div
            class="title"
          >
            <a
              href="/project//data/export"
            >
              <button
                class="ant-btn ant-btn-default basic-button-wrapper css-1vnelmv"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.219 7.333h8.114v1.334H5.22l3.576 3.576-.943.942L2.667 8l5.185-5.185.943.942z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <span>
                  返回工单列表
                </span>
              </button>
            </a>
          </div>
          <div
            class="extra"
          >
            <button
              class="ant-btn ant-btn-default basic-button-wrapper css-1vnelmv"
              type="button"
            >
              <span>
                重 置
              </span>
            </button>
          </div>
        </div>
        <form
          class="ant-form ant-form-vertical hasTopHeader clearPaddingBottom css-19jfn7e"
        >
          <section
            class="has-border css-1114g56"
          >
            <section
              class="css-bspaai"
            >
              <h3
                class="ant-typography css-p50odb"
              >
                <span
                  class="anticon title-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="0 0 24 28"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M4 3.333v5.334h16V3.333h2.675c.732 0 1.325.594 1.325 1.325v21.35c0 .732-.593 1.325-1.325 1.325H1.325A1.325 1.325 0 0 1 0 26.01V4.658c0-.732.593-1.325 1.325-1.325zm4 17.334H5.333v2.666H8zm0-4H5.333v2.666H8zm0-4H5.333v2.666H8zm9.333-12V6H6.667V.667z"
                      fill="#C3C6CD"
                    />
                  </svg>
                </span>
                <span>
                  创建导出工单
                </span>
              </h3>
              <div
                class="ant-form-item css-15d6abf"
              >
                <div
                  class="ant-row ant-form-item-row"
                >
                  <div
                    class="ant-col ant-form-item-label ant-form-item-label-left"
                  >
                    <label
                      class="ant-form-item-required ant-form-item-no-colon"
                      for="workflow_subject"
                      title=""
                    />
                  </div>
                  <div
                    class="ant-col ant-form-item-control"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <input
                          aria-required="true"
                          class="ant-input basic-input-wrapper workflow-name-input-wrapper css-opeiev"
                          id="workflow_subject"
                          placeholder="请输入数据导出工单名称"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-form-item workflow-base-info-desc-form-item css-1jlm9cy"
              >
                <div
                  class="ant-row ant-form-item-row"
                >
                  <div
                    class="ant-col ant-form-item-label ant-form-item-label-left"
                  >
                    <label
                      class="ant-form-item-no-colon"
                      for="desc"
                      title="工单描述"
                    >
                      工单描述
                    </label>
                  </div>
                  <div
                    class="ant-col ant-form-item-control"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <span
                          class="ant-input-affix-wrapper basic-input-wrapper css-1pd1cd5 ant-input-textarea-affix-wrapper ant-input-textarea-show-count ant-input-show-count"
                          data-count="0 / 3000"
                        >
                          <textarea
                            class="ant-input"
                            id="desc"
                            placeholder="点击添加数据导出描述"
                            style="overflow-y: hidden; resize: none;"
                          />
                          <span
                            class="ant-input-suffix"
                          >
                            <span
                              class="ant-input-data-count"
                            >
                              0 / 3000
                            </span>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </section>
          </section>
        </form>
        <form
          class="ant-form ant-form-horizontal clearPaddingBottom css-23knkd"
        >
          <section
            class="has-border css-1114g56"
          >
            <section
              class="css-bspaai"
            >
              <h1
                class="ant-typography css-1eepp70"
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px;"
                  >
                    选择导出对象
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle tooltips-default-icon"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
              </h1>
              <div
                class="ant-form-item has-required-style css-1jlm9cy"
              >
                <div
                  class="ant-row ant-form-item-row"
                >
                  <div
                    class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left"
                  >
                    <label
                      class="ant-form-item-required ant-form-item-no-colon"
                      for="dbService"
                      title=""
                    >
                      <div
                        class="label-cont-custom"
                      >
                        <span
                          class="custom-icon-ellipse css-u3jcp4"
                        >
                          <svg
                            fill="none"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <rect
                              fill="#E8F3FF"
                              height="16"
                              rx="3"
                              width="16"
                            />
                            <circle
                              cx="8"
                              cy="8"
                              fill="#fff"
                              r="3"
                              stroke="#4583FF"
                              stroke-width="2"
                            />
                          </svg>
                        </span>
                        <span>
                          数据源
                        </span>
                      </div>
                    </label>
                  </div>
                  <div
                    class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <div
                          aria-required="true"
                          class="ant-select ant-select-in-form-item basic-select-wrapper css-1gowd4m ant-select-single ant-select-show-arrow ant-select-loading"
                        >
                          <div
                            class="ant-select-selector"
                          >
                            <span
                              class="ant-select-selection-search"
                            >
                              <input
                                aria-activedescendant="dbService_list_0"
                                aria-autocomplete="list"
                                aria-controls="dbService_list"
                                aria-expanded="false"
                                aria-haspopup="listbox"
                                aria-owns="dbService_list"
                                aria-required="true"
                                autocomplete="off"
                                class="ant-select-selection-search-input"
                                id="dbService"
                                readonly=""
                                role="combobox"
                                style="opacity: 0;"
                                type="search"
                                unselectable="on"
                                value=""
                              />
                            </span>
                            <span
                              class="ant-select-selection-placeholder"
                            >
                              请选择数据源
                            </span>
                          </div>
                          <span
                            aria-hidden="true"
                            class="ant-select-arrow ant-select-arrow-loading"
                            style="user-select: none;"
                            unselectable="on"
                          >
                            <span
                              aria-label="loading"
                              class="anticon anticon-loading anticon-spin"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="loading"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="0 0 1024 1024"
                                width="1em"
                              >
                                <path
                                  d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-form-item css-1jlm9cy ant-form-item-hidden"
              >
                <div
                  class="ant-row ant-form-item-row"
                >
                  <div
                    class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <input
                          class="ant-input basic-input-wrapper css-1pd1cd5"
                          id="dbType"
                          placeholder="请输入{{name}}"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-form-item has-required-style css-1jlm9cy"
              >
                <div
                  class="ant-row ant-form-item-row"
                >
                  <div
                    class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left"
                  >
                    <label
                      class="ant-form-item-required ant-form-item-no-colon"
                      for="schema"
                      title=""
                    >
                      <div
                        class="label-cont-custom"
                      >
                        <span
                          class="custom-icon-ellipse css-u3jcp4"
                        >
                          <svg
                            fill="none"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <rect
                              fill="#E8F3FF"
                              height="16"
                              rx="3"
                              width="16"
                            />
                            <circle
                              cx="8"
                              cy="8"
                              fill="#fff"
                              r="3"
                              stroke="#4583FF"
                              stroke-width="2"
                            />
                          </svg>
                        </span>
                        <span>
                          数据库
                        </span>
                      </div>
                    </label>
                  </div>
                  <div
                    class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <div
                          aria-required="true"
                          class="ant-select ant-select-in-form-item basic-select-wrapper css-1gowd4m ant-select-single ant-select-show-arrow"
                        >
                          <div
                            class="ant-select-selector"
                          >
                            <span
                              class="ant-select-selection-search"
                            >
                              <input
                                aria-activedescendant="schema_list_0"
                                aria-autocomplete="list"
                                aria-controls="schema_list"
                                aria-expanded="false"
                                aria-haspopup="listbox"
                                aria-owns="schema_list"
                                aria-required="true"
                                autocomplete="off"
                                class="ant-select-selection-search-input"
                                id="schema"
                                readonly=""
                                role="combobox"
                                style="opacity: 0;"
                                type="search"
                                unselectable="on"
                                value=""
                              />
                            </span>
                            <span
                              class="ant-select-selection-placeholder"
                            >
                              请选择数据库
                            </span>
                          </div>
                          <span
                            aria-hidden="true"
                            class="ant-select-arrow"
                            style="user-select: none;"
                            unselectable="on"
                          >
                            <span
                              aria-label="down"
                              class="anticon anticon-down ant-select-suffix"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="down"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </section>
          </section>
        </form>
        <form
          class="ant-form ant-form-horizontal clearPaddingBottom css-19jfn7e"
        >
          <section
            class="css-bspaai"
          >
            <h1
              class="ant-typography css-1eepp70"
            >
              选择导出方式
            </h1>
            <div
              class="ant-form-item css-15d6abf"
            >
              <div
                class="ant-row ant-form-item-row"
              >
                <div
                  class="ant-col ant-form-item-label ant-form-item-label-left"
                >
                  <label
                    class="ant-form-item-no-colon"
                    for="exportMethod"
                    title=""
                  />
                </div>
                <div
                  class="ant-col ant-form-item-control"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <div
                        class="ant-row actiontech-mode-switcher"
                        id="exportMethod"
                      >
                        <div
                          class="ant-col ant-col-8"
                        >
                          <div
                            class="actiontech-mode-switcher-item actiontech-mode-switcher-item-active css-klzra6"
                          >
                            <span
                              class="actiontech-mode-switcher-item-icon"
                            >
                              <svg
                                height="18"
                                viewBox="0 0 18 18"
                                width="18"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M15 7.5H3v6.75h12zM2.25 2.25h13.5a.75.75 0 0 1 .75.75v12a.75.75 0 0 1-.75.75H2.25A.75.75 0 0 1 1.5 15V3a.75.75 0 0 1 .75-.75m1.5 2.25V6h1.5V4.5zm3 0V6h1.5V4.5zm-3 3.75H6V12H3.75z"
                                  fill="currentColor"
                                />
                              </svg>
                            </span>
                            <span
                              class="actiontech-mode-switcher-item-text"
                            >
                              输入SQL语句
                            </span>
                            <div
                              class="active-icon-wrapper"
                            >
                              <span
                                class="icon-mode-switcher-checked active-icon"
                              >
                                <svg
                                  fill="none"
                                  height="14"
                                  viewBox="0 0 14 14"
                                  width="14"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <g
                                    id="Frame"
                                  >
                                    <path
                                      d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                                      id="Vector"
                                      stroke="#FCFBF9"
                                      stroke-linejoin="round"
                                      stroke-width="1.5"
                                    />
                                  </g>
                                </svg>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-form-item css-15d6abf"
            >
              <div
                class="ant-row ant-form-item-row"
              >
                <div
                  class="ant-col ant-form-item-label ant-form-item-label-left"
                >
                  <label
                    class="ant-form-item-required ant-form-item-no-colon"
                    for="sql"
                    title=""
                  />
                </div>
                <div
                  class="ant-col ant-form-item-control"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <div
                        class="css-1sm8xw8"
                      >
                        <div
                          class="custom-monaco-editor-wrapper css-1esok7i"
                        >
                          <input
                            aria-required="true"
                            class="custom-monaco-editor"
                            height="400px"
                            id="sql"
                            language="sql"
                            options="{"automaticLayout":true,"minimap":{"enabled":false},"fontFamily":"SF Mono","fontSize":14,"fontWeight":"400","lineNumbersMinChars":2,"suggestFontSize":14,"scrollBeyondLastLine":false,"lineHeight":24,"letterSpacing":0.8,"overviewRulerBorder":false,"wordWrap":"on","wrappingStrategy":"advanced","wrappingIndent":"indent","scrollbar":{"vertical":"visible","horizontal":"visible","useShadows":false,"verticalScrollbarSize":12,"horizontalScrollbarSize":12,"alwaysConsumeMouseWheel":false},"folding":false,"lineNumbers":"on","glyphMargin":false,"lineDecorationsWidth":50,"renderValidationDecorations":"on","guides":{"indentation":true,"highlightActiveIndentation":true}}"
                            value="/* input your sql */"
                            width="100%"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-form-item css-15d6abf ant-form-item-hidden"
            >
              <div
                class="ant-row ant-form-item-row"
              >
                <div
                  class="ant-col ant-form-item-label ant-form-item-label-left"
                >
                  <label
                    class="ant-form-item-no-colon"
                    for="formatted"
                    title=""
                  />
                </div>
                <div
                  class="ant-col ant-form-item-control"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <button
                        aria-checked="false"
                        class="ant-switch basic-switch-wrapper css-g6dhbn"
                        id="formatted"
                        role="switch"
                        type="button"
                      >
                        <div
                          class="ant-switch-handle"
                        />
                        <span
                          class="ant-switch-inner"
                        >
                          <span
                            class="ant-switch-inner-checked"
                          />
                          <span
                            class="ant-switch-inner-unchecked"
                          />
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-form-item css-15d6abf ant-form-item-hidden"
            >
              <div
                class="ant-row ant-form-item-row"
              >
                <div
                  class="ant-col ant-form-item-label ant-form-item-label-left"
                >
                  <label
                    class="ant-form-item-no-colon"
                    for="originSql"
                    title=""
                  />
                </div>
                <div
                  class="ant-col ant-form-item-control"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <input
                        class="ant-input basic-input-wrapper css-1pd1cd5"
                        id="originSql"
                        placeholder="请输入{{name}}"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </form>
        <section
          class="css-bspaai"
          style="padding-bottom: 80px;"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 12px;"
            >
              <button
                class="ant-btn ant-btn-primary basic-button-wrapper css-1vnelmv"
                type="button"
              >
                <span>
                  审 核
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
              style="margin-right: 12px;"
            >
              <button
                class="ant-btn ant-btn-default basic-button-wrapper css-1s5ld2m"
                type="button"
              >
                <span>
                  SQL美化
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
              >
                <div
                  class="ant-space-item"
                >
                  <svg
                    color="#8A8F99"
                    height="14"
                    viewBox="0 0 14 14"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7 12.833A5.833 5.833 0 1 1 7 1.167a5.833 5.833 0 0 1 0 11.666m0-1.166a4.666 4.666 0 1 0 0-9.333 4.666 4.666 0 0 0 0 9.333m-.583-7.584h1.166V5.25H6.417zm0 2.334h1.166v3.5H6.417z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </section>
      </section>
    </div>
  </div>
</div>
`;
